--- a/main.html
+++ b/main.html
@@ -8,6 +8,56 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <table border="">
+		 <thead>
+			 <tr>
+				 <th>Roll number</th>
+				 <th>Names</th>
+			 </tr>
+		 </thead>
+		 <tbody>
+			 <tr>
+				 <td>101</td>
+				 <td>sebi</td>
+			 </tr>
+		 </tbody>
+		 <tbody>
+			 <tr>
+				 <td>102</td>
+				 <td>mickey</td>
+			 </tr>
+		 </tbody>
+		 <tbody>
+			 <tr>
+				 <td>103</td>
+				 <td>mini</td>
+			 </tr>
+		 </tbody>
+	 </table>
+
+		<h1>List of medias</h1>
+
+	<ol>
+		<li>
+			<h2>Image</h2>
+			<img src="https://picsum.photos/id/123/200/300" alt="random image">
+		</li>
+		<li>
+			<h2>Video</h2>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+			Your browser does not support the video element.
+			</video>
+		</li>
+		<li>
+			<h2>Audio</h2>
+			<audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio>
+		</li>
+	</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
