--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <table border="">
+	 <table>
 		 <thead>
 			 <tr>
-				 <th>Roll number</th>
+				 <th>Roll numbers</th>
 				 <th>Names</th>
 			 </tr>
 		 </thead>
@@ -38,22 +38,18 @@
 		<h1>List of medias</h1>
 
 	<ol>
-		<li>
-			<h2>Image</h2>
+		<li> 
 			<img src="https://picsum.photos/id/123/200/300" alt="random image">
 		</li>
-		<li>
-			<h2>Video</h2>
+		<li> 
 			<video controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 			 
 			</video>
 		</li>
-		<li>
-			<h2>Audio</h2>
+		<li> 
 			<audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                 
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"> 
             </audio>
 		</li>
 	</ol>
