--- a/main.html
+++ b/main.html
@@ -40,13 +40,13 @@
 		<li> 
 			<video controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-			 asjkfnmkflajkjn
+			  Your browser does not support the video element.
 			</video>
 		</li>
 		<li> 
 			<audio controls>
                 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"> 
-           askfljlksaa
+            Your browser does not support the audio element.
 			</audio>
 		</li>
 	</ol>
